# datalad-slurm

./: .appveyor.yml  .gitattributes  .gitignore  .zenodo.json  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_crippledfs.yml
datalad_slurm/: __init__.py  _version.py  common.py  finish.py  hello_cmd.py  reschedule.py  schedule.py
datalad_slurm/tests/: test_register.py
docs/: Makefile
docs/source/: cli_reference.rst  conf.py  index.rst  python_reference.rst
tests/: README.md  run_test08.sh  slurm_config_sample.txt  slurm_test01.template.sh  slurm_test03.template.sh  slurm_test05.template.sh  slurm_test06.template.sh  slurm_test08.template.sh  test_01_many_jobs.sh  test_01_many_jobs_and_wildcard_dirnames.sh  test_02_conflicting_jobs.sh  test_02_conflicting_jobs_and_wildcard_dirnames.sh  test_03_output_to_same_dir.sh  test_04_conflicting_in_same_dir.sh  test_05_failed_jobs.sh  test_06_array_jobs.sh  test_07_multiple_conflicting_dirs.sh  test_08_timings.sh  test_08_timings_slurm_only.sh  test_08_timings_very_many_jobs.sh  test_08_timings_very_many_jobs_dont_finish.sh  test_09_reschedule.sh
